--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -1,8 +1,8 @@
 # 网站的基本信息
 site:
-  tab: Frosti # 浏览器标签栏上显示的文本
-  title: 💠 Frosti # 网站的标题
-  description: A clean, elegant, and fast static blog template! 🚀 Developed with Astro # 网站的描述，用于SEO等
+  tab: Flyer-moji's Blog # 浏览器标签栏上显示的文本
+  title: Flyer-moji的博客 # 网站的标题
+  description: Only through independent thinking can we move beyond superficial culture. Flyer-moji's blog # 网站的描述，用于SEO等
   language: en # 网站的语言，例如 "en" 是英文
   favicon: /favicon.ico # 网站的图标，用于浏览器标签栏和其他地方显示
   theme: # 更多主题 https://daisyui.com/docs/themes/
@@ -39,17 +39,17 @@ site:
           href: /blog/category/tech
           svg: "material-symbols:deployed-code-outline"
           target: _self
-        - id: life
-          text: Life blogs
-          href: /blog/category/life
-          svg: "material-symbols:earthquake-rounded"
-          target: _self
+        # - id: life
+        #   text: Life blogs
+        #   href: /blog/category/life
+        #   svg: "material-symbols:earthquake-rounded"
+        #   target: _self
         # 子菜单项配置
-    - id: project
-      text: Project
-      href: /project
-      svg: "material-symbols:code-blocks-outline"
-      target: _self
+    # - id: project
+    #   text: Project
+    #   href: /project
+    #   svg: "material-symbols:code-blocks-outline"
+    #   target: _self
     - id: friend
       text: Friend
       href: /friend
@@ -57,48 +57,48 @@ site:
       target: _self
     - id: contact
       text: Contact
-      href: "mailto:contact.evesunmaple@outlook.com"
+      href: "mailto:hkivela123@gmail.com"
       target: _blank # 在新标签页打开
       svg: "material-symbols:attach-email-outline-rounded"
 
 # 用户的个人信息
 user:
-  name: EveSunMaple # 用户名
-  site: "https://frosti.saroprock.com" # 用户的网站链接
-  avatar: /profile.png # 用户头像路径
+  name: Flyer-moji # 用户的姓名
+  site: "https://flyer-moji.netlify.app" # 用户的网站链接
+  avatar: /profile1.png # 用户头像路径
   sidebar: # 侧边栏配置
     social:
-      - href: "https://afdian.com/a/saroprock" # 链接
-        ariaLabel: Support my work # 图标的可访问性标签
-        title: Support my work # 图标的悬浮标题
-        svg: "ri:cup-line"
-      - href: "https://github.com/EveSunMaple"
+      # - href: "https://afdian.com/a/saroprock" # 链接
+      #   ariaLabel: Support my work # 图标的可访问性标签
+      #   title: Support my work # 图标的悬浮标题
+      #   svg: "ri:cup-line"
+      - href: "https://github.com/Flyer-moji"
         ariaLabel: Github
         title: Github
         svg: "ri:github-line"
-      - href: "https://space.bilibili.com/438392347"
+      - href: "https://space.bilibili.com/1163790649"
         ariaLabel: BiliBili
         title: BiliBili
         svg: "ri:bilibili-line"
-      - href: "https://x.com/EveSunMaple"
-        ariaLabel: X(twitter)
-        title: X(twitter)
-        svg: "ri:twitter-line"
+      # - href: "https://x.com/EveSunMaple"
+      #   ariaLabel: X(twitter)
+      #   title: X(twitter)
+      #   svg: "ri:twitter-line"
   footer:
     social:
-      - href: "https://afdian.com/a/saroprock" # 链接
-        ariaLabel: Support my work # 图标的可访问性标签
-        title: Support my work # 图标的悬浮标题
-        svg: "ri:cup-line"
-      - href: "https://github.com/EveSunMaple"
+      # - href: "https://afdian.com/a/saroprock" # 链接
+      #   ariaLabel: Support my work # 图标的可访问性标签
+      #   title: Support my work # 图标的悬浮标题
+      #   svg: "ri:cup-line"
+      - href: "https://github.com/Flyer-moji"
         ariaLabel: Github
         title: Github
         svg: "ri:github-line"
-      - href: "https://space.bilibili.com/438392347"
+      - href: "https://space.bilibili.com/1163790649"
         ariaLabel: BiliBili
         title: BiliBili
         svg: "ri:bilibili-line"
-      - href: "https://x.com/EveSunMaple"
-        ariaLabel: X(twitter)
-        title: X(twitter)
-        svg: "ri:twitter-line"
+      # - href: "https://x.com/EveSunMaple"
+      #   ariaLabel: X(twitter)
+      #   title: X(twitter)
+      #   svg: "ri:twitter-line"
